--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,14 @@ h1 {
   box-shadow: 0 10px 25px rgba(0,0,0,0.05);
 }
 
+.simpleshop {
+  margin-bottom: 2rem;
+  background: #fff;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+}
+
 @media (min-width: 768px) {
   .product {
     flex-direction: row;
