--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ h1 {
 }
 /* Gradient na text */
 .gradient-text {
-  background: linear-gradient(90deg, var(--color-text), var(--color-bg));
+  background: linear-gradient(90deg, var(--color-text) 0% , var(--color-text) 60%, var(--color-bg) 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
